--- a/em-mixture-mv.Rmd
+++ b/em-mixture-mv.Rmd
@@ -119,6 +119,8 @@ This example uses Old Faithful geyser eruptions.  This is can be compared to the
 #### Data Setup
 
 ```{r mixmv-setup1}
+library(tidyverse)
+
 data("faithful")
 ```
 
@@ -285,5 +287,5 @@ table(mclust_iris$classification, iris$Species)
 
 ### Source
 
-Source code found at
+Original code available at
 https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/EM%20Examples/EM%20Mixture%20MV.R
