--- a/mixed-model-one-factor.Rmd
+++ b/mixed-model-one-factor.Rmd
@@ -7,7 +7,24 @@ An approach for one factor random effects model via maximum likelihood in R Matl
 
 
 
-## Main Function 
+## Data Setup
+
+```{r one-factor-re-setup}
+library(tidyverse)
+
+y = matrix(c(22.6,20.5,20.8,
+             22.6,21.2,20.5,
+             17.3,16.2,16.6,
+             21.4,23.7,23.2,
+             20.9,22.2,22.6,
+             14.5,10.5,12.3,
+             20.8,19.1,21.3,
+             17.4,18.6,18.6,
+             25.1,24.8,24.9,
+             14.9,16.3,16.6), 10, 3, byrow=T)
+```
+
+## Function 
  
 ```{r one-factor-re}
 one_factor_re  = function(mu, sigma2_mu, sigma2){
@@ -35,27 +52,6 @@ one_factor_re  = function(mu, sigma2_mu, sigma2){
   return(-ll)
 }
 ```
-
-
-
-
-
-## Data Setup
-
-```{r one-factor-re-setup}
-y = matrix(c(22.6,20.5,20.8,
-             22.6,21.2,20.5,
-             17.3,16.2,16.6,
-             21.4,23.7,23.2,
-             20.9,22.2,22.6,
-             14.5,10.5,12.3,
-             20.8,19.1,21.3,
-             17.4,18.6,18.6,
-             25.1,24.8,24.9,
-             14.9,16.3,16.6), 10, 3, byrow=T)
-```
-
-
 
 
 ## Estimation 
@@ -121,4 +117,4 @@ summary(lme)
 
 ## Source
 
-Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Mixed%20Models/one_factor_RE.R
+Original code available at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Mixed%20Models/one_factor_RE.R
