--- a/naive-bayes.Rmd
+++ b/naive-bayes.Rmd
@@ -6,10 +6,12 @@
 Demo for binary data. First we generate some data. We have several binary covariates and a binary target variable `y`.
 
 ```{r naive-init}
+library(tidyverse)
+
 set.seed(123)
 
 x  = matrix(sample(0:1, 50, replace = TRUE), ncol = 5)
-xf = data.frame(lapply(data.frame(x), factor))
+xf = map(data.frame(x), factor)
 y  = sample(0:1, 10, prob = c(.25, .75), replace = TRUE)
 ```
 
@@ -30,11 +32,11 @@ m
 Using base R for our model, we can easily obtain the 'predictions'...
 
 ```{r naive-est}
-lapply(xf, function(var)
+map(xf, function(var)
   t(prop.table(table(' ' = var, y), margin = 2)))
 ```
 
 
 ## Source
 
-Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/naivebayes.R
+Original code available at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/naivebayes.R
