--- a/quantile-regression.Rmd
+++ b/quantile-regression.Rmd
@@ -3,20 +3,11 @@
 
 
 
-## Loss function
-
-```{r qreg}
-qreg = function(par, X, y, tau) {
-  lp = X%*%par
-  res = y - lp
-  loss = ifelse(res < 0 , -(1-tau)*res, tau*res)
-  sum(loss)
-}
-```
 
 
 
-### Data Prep
+
+### Data Setup
 
 We'll use the <span class="pack" style = "">quantreg</span> package for comparison, and the classic data set on Belgian household income and food expenditure.  Scale income if you want a meaningful 'centercept'.
 
@@ -24,6 +15,19 @@ We'll use the <span class="pack" style = "">quantreg</span> package for comparis
 library(quantreg)
 data(engel)          
 ### engel$income = scale(engel$income)
+```
+
+## Function
+
+Loss function.
+
+```{r qreg}
+qreg = function(par, X, y, tau) {
+  lp = X%*%par
+  res = y - lp
+  loss = ifelse(res < 0 , -(1 - tau)*res, tau*res)
+  sum(loss)
+}
 ```
 
 ### Median estimation
@@ -92,4 +96,4 @@ engel %>%
 
 ## Source
 
-Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/quantile_regression.Rmd
+Original code available at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/quantile_regression.Rmd
