--- a/ridge.Rmd
+++ b/ridge.Rmd
@@ -3,20 +3,13 @@
 
 Compare to [lasso chapter][L1 (lasso) regularization].  A more conceptual depiction of the lasso can be found in the [penalized ML chapter][Penalized Maximum Likelihood].
 
-```{r ridge-function}
-ridge <- function(w, X, y, lambda = .1) {
-  # X: model matrix; 
-  # y: target; 
-  # lambda: penalty parameter; 
-  # w: the weights/coefficients
-  
-  crossprod(y - X %*% w) + lambda * length(y) * crossprod(w)
-}
-```
- 
+## Data Setup
 
 ```{r ridge-setup}
+library(tidyverse)
+
 set.seed(8675309)
+
 N = 500
 p = 10
 X = scale(matrix(rnorm(N * p), ncol = p))
@@ -27,6 +20,22 @@ y = scale(X %*% b + rnorm(N, sd = .5))
 Note, if `lambda = 0`, result is the same as  `lm.fit`.
 
 
+## Functions
+
+```{r ridge-function}
+ridge <- function(w, X, y, lambda = .1) {
+  # X: model matrix; 
+  # y: target; 
+  # lambda: penalty parameter; 
+  # w: the weights/coefficients
+  
+  crossprod(y - X %*% w) + lambda * length(y) * crossprod(w)
+}
+```
+
+
+
+## Estimation
 
 ```{r ridge-est}
 result_ridge = optim(
@@ -103,4 +112,4 @@ data.frame(
 
 ## Source
 
-Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/ridge.R
+Original code available at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/ridge.R
