--- a/tobit.Rmd
+++ b/tobit.Rmd
@@ -3,6 +3,35 @@
 
 A simple demonstration of tobit regression via maximum likelihood. The issue is one where data is censored such that while we observe the value, it is not the true value, which would extend beyond the range of the observed data. This is very commonly seen in cases where the dependent variable has been given some arbitrary cutoff at the lower or upper end of the range, often resulting in floor or ceiling effects respectively. The conceptual idea is that we are interested in modeling the underlying latent variable that would not have such restriction if it was actually observed.
 
+
+
+
+
+## Demonstrate Censoring with an Upper Limit
+
+### Data Setup 
+
+Data regards academic aptitude (GRE scores) with will be modeled using reading and math test scores, as well as the type of program the student is enrolled in (academic, general, or vocational).  See this for an applied example and more detail- https://stats.idre.ucla.edu/r/dae/tobit-models/
+
+```{r tobit-setup}
+library(tidyverse)
+
+acad_apt = read_csv("https://stats.idre.ucla.edu/stat/data/tobit.csv") %>%
+  mutate(prog = factor(prog, labels = c('acad', 'general', 'vocational')))
+```
+
+
+Setup data and initial values.
+
+```{r tobit-initial}
+initmod = lm(apt ~ read + math + prog, data = acad_apt)
+X = model.matrix(initmod)
+init = c(coef(initmod), log_sigma = log(summary(initmod)$sigma))
+```
+
+
+### Function
+
 ```{r tobit-ll}
 tobit <- function(par, X, y, ul = -Inf, ll = Inf) {
   
@@ -32,30 +61,7 @@ tobit <- function(par, X, y, ul = -Inf, ll = Inf) {
 }
 ```
 
-
-
-
-## Demonstrate Censoring with an Upper Limit
-
-### Data Setup 
-
-Data regards academic aptitude (GRE scores) with will be modeled using reading and math test scores, as well as the type of program the student is enrolled in (academic, general, or vocational).  See this for an applied example and more detail- https://stats.idre.ucla.edu/r/dae/tobit-models/
-
-```{r tobit-setup}
-library(tidyverse)
-
-acad_apt = read_csv("https://stats.idre.ucla.edu/stat/data/tobit.csv") %>%
-  mutate(prog = factor(prog, labels = c('acad', 'general', 'vocational')))
-```
-
-
-Setup data and initial values.
-
-```{r tobit-initial}
-initmod = lm(apt ~ read + math + prog, data = acad_apt)
-X = model.matrix(initmod)
-init = c(coef(initmod), log_sigma = log(summary(initmod)$sigma))
-```
+### Estimation
 
 Estimate via <span class="func" style = "">optim</span>.
 
@@ -184,4 +190,4 @@ rbind(
 
 ## Source
 
-Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/tobit.R
+Original code available at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/tobit.R
