--- a/em-ppca.Rmd
+++ b/em-ppca.Rmd
@@ -18,7 +18,7 @@ X = scale(state.x77)
 ### Function
 
 ```{r em-ppca-func}
-em_ppca = function(
+em_ppca <- function(
   X,
   nComp = 2,
   tol   = .00001,
